# magnitude-1

./: .gitignore  AGENTS.md  README.md  package.json  test-config-chain.ts  tsconfig.json  vitest.workspace.ts
.changeset/: pre.json
.github/workflows/: release.yml
cli/: package.json  vitest.config.ts
cli/scripts/: build-binary.ts
cli/src/: app.overlay-keyboard-policy.test.ts  app.tsx  index.tsx  serve.ts
cli/src/commands/: command-router.test.ts  command-router.ts  headless.ts  slash-commands.ts
cli/src/components/: agent-communication-card.tsx  animated-logo.tsx  app-overlays.tsx  approval-request.tsx  assistant-message.tsx  attachments-bar.tsx  autopilot-indicator.tsx  autopilot-preview-message.tsx  bash-output.tsx  chat-surface-keyboard.tsx  chat-timeline.tsx  clipboard-copy-feedback.test.tsx  debug-panel.tsx  diff-hunk.tsx  error-message.tsx  file-mention-menu.tsx  fork-detail-overlay.test.tsx  fork-detail-overlay.tsx  inline-fork-activity.tsx  (+14 more)
docs/: agent-team.mdx  coding-plan.mdx  configuration.mdx  docs.json  get-started.mdx  open-source.mdx  pricing.mdx  style.css  using-magnitude.mdx  why-magnitude.mdx
evals/: .gitignore  package.json  tsconfig.json
evals/src/: cli.ts  runner.ts  types.ts
evals/tbench/: .gitignore  Dockerfile.build  README.md  cli.ts  magnitude_agent.py  pyproject.toml  run.ts  seed_daytona_volume.py  seed_modal_volume.py
evals/tbench/src/tbench/: __init__.py  __main__.py  atif.py  binary.py  cli.py  config.py  json_formatter.py  renderer.py  run_orchestrator.py  scanner.py  submit.py
reports/: cli-scout-report.md
(+66 files in other folders)
